--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,45 @@
 RewriteEngine On
 RewriteCond %{HTTPS} !=on
 RewriteRule ^.*$ https://%{SERVER_NAME}%{REQUEST_URI} [R=301,L]
+
+ExpiresActive On
+ExpiresDefault A0
+<FilesMatch “\.(gif|jpg|jpeg|png|swf)$”>
+# 2 weeks
+ExpiresDefault A1209600
+Header append Cache-Control “public”
+</FilesMatch>
+<FilesMatch “\.(xml|txt|html)$”>
+# 2 hours
+ExpiresDefault A7200
+Header append Cache-Control “proxy-revalidate”
+</FilesMatch>
+<FilesMatch “\.(js|css)$”>
+# 3 days
+ExpiresDefault A259200
+Header append Cache-Control “proxy-revalidate”
+</FilesMatch>
+
+<IfModule mod_deflate.c>
+ AddOutputFilterByType DEFLATE application/javascript
+ AddOutputFilterByType DEFLATE application/rss+xml
+ AddOutputFilterByType DEFLATE application/vnd.ms-fontobject
+ AddOutputFilterByType DEFLATE application/x-font
+ AddOutputFilterByType DEFLATE application/x-font-opentype
+ AddOutputFilterByType DEFLATE application/x-font-otf
+ AddOutputFilterByType DEFLATE application/x-font-truetype
+ AddOutputFilterByType DEFLATE application/x-font-ttf
+ AddOutputFilterByType DEFLATE application/x-javascript
+ AddOutputFilterByType DEFLATE application/xhtml+xml
+ AddOutputFilterByType DEFLATE application/xml
+ AddOutputFilterByType DEFLATE font/opentype
+ AddOutputFilterByType DEFLATE font/otf
+ AddOutputFilterByType DEFLATE font/ttf
+ AddOutputFilterByType DEFLATE image/svg+xml
+ AddOutputFilterByType DEFLATE image/x-icon
+ AddOutputFilterByType DEFLATE text/css
+ AddOutputFilterByType DEFLATE text/html
+ AddOutputFilterByType DEFLATE text/javascript
+ AddOutputFilterByType DEFLATE text/plain
+ AddOutputFilterByType DEFLATE text/xml
+</IfModule>
